update get revenue